--- a/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
+++ b/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
@@ -4,4 +4,4 @@ RUN mkdir /exaudf_src /exaudf_src/build /exaudf
 
 COPY src/ /exaudf_src/
 
-RUN /exaudf_src/build_client.sh --src-dir=/exaudf_src --build-dir=/exaudf_src/build --output-dir=/exaudf --enable-python --custom-protobuf-prefix=/usr/local --python-version=python3.6
+RUN /exaudf_src/build_client.sh --src-dir=/exaudf_src --build-dir=/exaudf_src/build --output-dir=/exaudf --enable-python --custom-protobuf-prefix=/usr/local --python-version=python3.6 --executable-name=exaudfclient_py3
