--- a/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
+++ b/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
@@ -14,4 +14,4 @@ ENV CUSTOM_PROTOBUF_BIN /usr/local/bin/protoc
 ENV CUSTOM_PROTOBUF_PREFIX /usr/local/lib
 ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
-RUN cd /exaudf_src/ && bash build.sh --define benchmark=true //:exaudfclient && cp -r -L bazel-bin/* /exaudf
+RUN cd /exaudf_src/ && bash build.sh --define python=true --define python3=true --copt="-DENABLE_PYTHON3" //:exaudfclient && cp -r -L bazel-bin/* /exaudf
