--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -1,4 +1,3 @@
 startup --expand_configs_in_place
-build --action_env=PYTHON_PREFIX --action_env=PYTHON_VERSION --action_env=PYTHON_SYSPATH --action_env=CUSTOM_PROTOBUF_BIN --cxxopt='-std=c++14'
-
+build --action_env=PYTHON_PREFIX --action_env=PYTHON_VERSION --action_env=PYTHON_SYSPATH --action_env=CUSTOM_PROTOBUF_BIN --action_env=JAVA_PREFIX --cxxopt='-std=c++14'
 #--define python=true --define benchmark=true --define java=true --define r=true
