--- a/src/WORKSPACE
+++ b/src/WORKSPACE
@@ -5,7 +5,7 @@ load("//:python_repository.bzl", "numpy_local_repository")
 numpy_local_repository(name = "numpy_linux")
 
 load("//:java_repository.bzl", "java_local_repository")
-java_local_repository(name = "java_linux")
+java_local_repository(name = "java")
 
 new_local_repository(
     name = "R_linux",
