--- a/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
+++ b/flavors/mini-EXASOL-6.0.0/Dockerfile.build_mini-EXASOL-6.0.0
@@ -8,10 +8,12 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y curl openjdk-8-jdk && \
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
-ENV PYTHON_PREFIX /usr 
-ENV PYTHON_VERSION python2.7
+ENV PYTHON2_PREFIX /usr 
+ENV PYTHON2_VERSION python2.7
 ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
 ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu
-ENV VERBOSE_BUILD "--subcommands --verbose_failures"
+#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
-RUN cd /exaudf_src/ && bash build.sh --define python=true //:exaudfclient && cp -r -L bazel-bin/* /exaudf
+RUN cd /exaudf_src/ && \
+	bash build.sh --define python=true //:exaudfclient && \
+	cp -r -L bazel-bin/* /exaudf
