--- a/flavors/standard-EXASOL-6.0.0/Dockerfile.build_standard-EXASOL-6.0.0
+++ b/flavors/standard-EXASOL-6.0.0/Dockerfile.build_standard-EXASOL-6.0.0
@@ -5,17 +5,16 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y curl openjdk-8-jdk && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && apt-get install -y bazel
 
-RUN mkdir /exaudf_src /exaudf_src/build /exaudf
+RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
 ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
-ENV PYTHON_PREFIX /usr 
-ENV PYTHON_VERSION python2.7
-ENV JAVA_PREFIX /usr/lib/jvm/java-9-openjdk-amd64
+ENV PYTHON2_PREFIX /usr 
+ENV PYTHON2_VERSION python2.7
 ENV CUSTOM_PROTOBUF_BIN /usr/bin/protoc
 ENV CUSTOM_PROTOBUF_PREFIX /usr/lib/x86_64-linux-gnu/
-ENV VERBOSE_BUILD "--subcommands --verbose_failures"
+#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 RUN cd /exaudf_src/ && \
-	bash build.sh --define r=true  --define python=true --define java=true //:exaudfclient && \
+	bash build.sh --define r=true --define python=true --define java=true //:exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
