fix exaudfclient.sh and add workaround for missing jars and pyextdataframe.so after build

--- a/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
+++ b/flavors/python3-ds-EXASOL-6.0.0/Dockerfile.build_python3-ds-EXASOL-6.0.0
@@ -17,4 +17,5 @@ ENV CUSTOM_PROTOBUF_PREFIX /usr/local/lib
 
 RUN cd /exaudf_src/ && \
 	bash build.sh --define python=true //:exaudfclient_py3 && \
+	mv bazel-bin/exaudfclient_py3 bazel-bin/exaudfclient && \
 	cp -r -L bazel-bin/* /exaudf
