--- a/src/BUILD
+++ b/src/BUILD
@@ -134,15 +134,18 @@ cc_binary(
     linkopts = ["-ldl"],
     deps = VM_ENABLED_DEPS+VM_PYTHON3_DEPS,
     defines = VM_ENABLED_DEFINES,
-    data = [":libexaudflib_complete.so","//python/python3:pyextdataframe.so"]
+    data = [":libexaudflib_complete.so"]
 )
 
 # Workaround for the problems of JNI with rpath used bazel
 genrule(
     name = "gen-exaudfclient",
     cmd = """
-        echo export LD_LIBRARY_PATH=`find "$$JAVA_PREFIX" -name *.so -type f |  xargs -n 1 dirname | sort | uniq | paste -sd ":" -` > $(location exaudfclient)
-        cat $(location exaudfclient.sh)>> $(location exaudfclient)
+        touch $(location exaudfclient)
+        cat $(location exaudfclient.sh) >> $(location exaudfclient)
+        echo export LD_LIBRARY_PATH=`find "$$JAVA_PREFIX" -name *.so -type f |  xargs -n 1 dirname | sort | uniq | paste -sd ":" -` >> $(location exaudfclient)
+        echo 'echo "LD_LIBRARY_PATH: $$LD_LIBRARY_PATH"' >> $(location exaudfclient)
+        echo ./`basename $(location exaudfclient_wrong_rpath_py2)` '$$*' >>  $(location exaudfclient)
     """,
     outs = ["exaudfclient"],
     srcs = [":exaudfclient_wrong_rpath_py2", "libexaudflib_complete.so", "exaudfclient.sh"],
@@ -153,8 +156,12 @@ genrule(
 genrule(
     name = "gen-exaudfclient-py3",
     cmd = """
-        echo export LD_LIBRARY_PATH=`find "$$JAVA_PREFIX" -name *.so -type f |  xargs -n 1 dirname | sort | uniq | paste -sd ":" -` > $(location exaudfclient_py3)
-        cat $(location exaudfclient.sh)>> $(location exaudfclient_py3)
+        touch $(location exaudfclient_py3)
+        cat $(location exaudfclient.sh) >> $(location exaudfclient_py3)
+        echo >> $(location exaudfclient_py3)
+        echo export LD_LIBRARY_PATH=`find "$$JAVA_PREFIX" -name *.so -type f |  xargs -n 1 dirname | sort | uniq | paste -sd ":" -` >> $(location exaudfclient_py3)
+        echo 'echo "LD_LIBRARY_PATH: $$LD_LIBRARY_PATH"' >> $(location exaudfclient_py3)
+        echo ./`basename $(location exaudfclient_wrong_rpath_py3)` '$$*' >>  $(location exaudfclient_py3)
     """,
     outs = ["exaudfclient_py3"],
     srcs = [":exaudfclient_wrong_rpath_py3", "libexaudflib_complete.so", "exaudfclient.sh"],
